version/0.14/_sources/examples/simulator/mechanics-simulator-leftventricle_pr.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\simulator\mechanics-simulator-leftventricle_pr.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_mechanics-simulator-leftventricle_pr.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_mechanics-simulator-leftventricle_pr.py:


Run a left ventricle mechanical simulation
------------------------------------------
This example shows you how to perform the following actions:

- Generate a left-ventricle model from a labeled surface.
- Set up the model for mechanical simulation:

  - Generate fibers.
  - Assign material.
  - Tune boundary conditions.
  - Compute stress-free configuration.
  - Run the simulation for one heartbeat.

- Postprocess the results:

  - Plot the stress-free configuration versus the end-diastole configuration.
  - Plot the Klotz curve.
  - Animate the simulation results.
  - Plot the PV loop.

.. GENERATED FROM PYTHON SOURCE LINES 47-56

.. warning::
   When using a standalone version of the DPF Server, you must accept the `license terms
   <https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html>`_. To
   accept these terms, you can set this environment variable:

   .. code-block:: python

       import os
       os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

.. GENERATED FROM PYTHON SOURCE LINES 58-62

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, heart model, and LS-DYNA executable file.

.. GENERATED FROM PYTHON SOURCE LINES 62-80

.. code-block:: Python


    import copy
    import glob
    import json
    import os
    from pathlib import Path
    import time

    import matplotlib.pyplot as plt
    from pint import Quantity
    import pyvista as pv

    from ansys.health.heart.examples import get_input_leftventricle
    import ansys.health.heart.models as models
    from ansys.health.heart.post.dpf_utils import ICVoutReader
    from ansys.health.heart.settings.material.material import ACTIVE, ANISO, ISO, Mat295
    from ansys.health.heart.simulator import DynaSettings, MechanicsSimulator








.. GENERATED FROM PYTHON SOURCE LINES 81-83

Get the model input surface and part definitions
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 83-96

.. code-block:: Python

    path_to_surface, path_to_part_definitions = get_input_leftventricle()

    # Plot the input surface.
    surface = pv.read(path_to_surface)
    surface.plot()

    # Load and print the parts defined in the JSON file.
    with open(path_to_part_definitions, "r") as f:
        part_definitions = json.load(f)

    # Print the part definitions using indentation for better readability.
    print(json.dumps(part_definitions, indent=4))








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_001.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_001.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_001.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {
        "Left ventricle": {
            "id": 1,
            "enclosed_by_boundaries": {
                "left-ventricle-endocardium": 1,
                "left-ventricle-epicardium": 2,
                "interface_left-ventricle-myocardium_mitral-valve-plane": 3,
                "interface_left-ventricle-myocardium_aortic-valve-plane": 4
            }
        }
    }




.. GENERATED FROM PYTHON SOURCE LINES 97-100

Load the input surface and mesh the model.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the working directory.

.. GENERATED FROM PYTHON SOURCE LINES 100-119

.. code-block:: Python

    workdir = (
        Path.home() / "pyansys-heart" / "downloads" / "Rodero2021" / "01" / "LeftVentricle-simulation"
    )

    # Initialize a left ventricle model.
    model: models.LeftVentricle = models.LeftVentricle(working_directory=workdir)

    # Load the input surface.
    model.load_input(surface, part_definitions, scalar="surface-id")

    # Mesh the volume.
    model.mesh_volume(use_wrapper=True, global_mesh_size=4.0, _global_wrap_size=4.0)

    # Update the model.
    model.update()

    # Plot the mesh.
    model.plot_mesh()








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_002.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_002.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_002.vtksz






.. GENERATED FROM PYTHON SOURCE LINES 120-123

.. note::
   This mesh is very coarse for and for demonstration purposes. In practice, the mesh size should
   be smaller.

.. GENERATED FROM PYTHON SOURCE LINES 125-128

Instantiate the simulator
~~~~~~~~~~~~~~~~~~~~~~~~~
Instantiate the simulator and define settings.

.. GENERATED FROM PYTHON SOURCE LINES 128-144

.. code-block:: Python


    # Specify the LS-DYNA path.
    lsdyna_path = r"ls-dyna_mpp"

    # Instantiate LS-DYNA settings.
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", num_cpus=2, platform="windows"
    )

    # Instantiate the simulator, modifying options as necessary.
    simulator = MechanicsSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "simulation-mechanics"),
    )








.. GENERATED FROM PYTHON SOURCE LINES 145-148

Load simulation settings
~~~~~~~~~~~~~~~~~~~~~~~~
Load the default settings.

.. GENERATED FROM PYTHON SOURCE LINES 148-150

.. code-block:: Python

    simulator.settings.load_defaults()








.. GENERATED FROM PYTHON SOURCE LINES 151-154

Compute fiber orientation
~~~~~~~~~~~~~~~~~~~~~~~~~
Compute fiber orientation and plot the fibers.

.. GENERATED FROM PYTHON SOURCE LINES 154-160

.. code-block:: Python

    simulator.compute_fibers(method="D-RBM")

    # Plot the fiber orientation by streamlines.
    simulator.model.plot_fibers(n_seed_points=2000)









.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_003.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_003.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_003.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyvista.plotting.plotter.Plotter object at 0x0000028D01698F90>



.. GENERATED FROM PYTHON SOURCE LINES 161-163

Assign a material to the left ventricle.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 163-180

.. code-block:: Python


    # Define a material for the myocardium.
    myocardium = Mat295(
        rho=0.001,
        iso=ISO(itype=-3, beta=2, kappa=1.0, k1=0.20e-3, k2=6.55),
        aniso=ANISO(
            atype=-1,
            fibers=[ANISO.HGOFiber(k1=0.00305, k2=29.05), ANISO.HGOFiber(k1=1.25e-3, k2=36.65)],
            k1fs=0.15e-3,
            k2fs=6.28,
        ),
        active=ACTIVE(),  # This uses the default active model
    )

    # Assign the material to the left ventricle.
    simulator.model.left_ventricle.meca_material = myocardium








.. GENERATED FROM PYTHON SOURCE LINES 181-183

Compute the stress-free configuration
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 183-203

.. code-block:: Python


    # Compute the stress-free configuration and estimate initial stress.
    report, stress_free_coord, guess_ed_coord = simulator.compute_stress_free_configuration()

    # Copy the mesh to a new variable for plotting.
    zerop = copy.deepcopy(simulator.model.mesh)

    # Update the points of the mesh with the stress-free coordinates.
    zerop.points = stress_free_coord

    # Plot the original and stress-free meshes.
    plotter = pv.Plotter()
    plotter.add_mesh(zerop, color="red", opacity=0.3, label="stress-free shape")
    plotter.add_mesh(simulator.model.mesh, color="grey", opacity=0.2, label="end-of-diastole")
    plotter.add_legend()
    plotter.show()

    # Print the stress free report in readable format.
    print(json.dumps(report, indent=4))








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_004.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_004.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_004.vtksz


.. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_005.png
   :alt: EDVPR
   :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {
        "Simulation output time (ms)": [
            0.0,
            100.0,
            200.23744201660156,
            329.7889709472656,
            409.2218017578125,
            509.2218017578125,
            609.2218017578125,
            709.2218017578125,
            809.2218017578125,
            909.2218017578125,
            1000.0
        ],
        "Convergence": {
            "max_error (mm)": 2.3571985565972406,
            "mean_error (mm)": 1.0103455837032487
        },
        "Cavity volumes": {
            "Left ventricle cavity": {
                "imposed cavity pressure (mmHg)": 15.0,
                "true end diastolic volume (mm3)": 118054.64901809898,
                "simulated volumes (mm3)": [
                    68223.191030618,
                    86096.28970675559,
                    95391.10969308282,
                    102080.25226872896,
                    105019.83009263125,
                    108481.1629619461,
                    110923.81321055503,
                    113042.60367154331,
                    115032.04536886638,
                    116553.35312604983,
                    117922.19194594867
                ],
                "volume error (%)": 0.11219979327540452
            }
        }
    }




.. GENERATED FROM PYTHON SOURCE LINES 204-207

.. note::
   The input geometry is assumed to be at the end-of-diastole with a
   ventricular pressure of 15 mmHg. You can modify this pressure in the settings.

.. GENERATED FROM PYTHON SOURCE LINES 209-211

Run the main simulation
~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 211-219

.. code-block:: Python


    # Tune the boundary conditions at the valve regions: in this model there are
    # springs in radial and normal direction of the valve region which constrain the model.
    simulator.settings.mechanics.boundary_conditions.valve["stiffness"] = Quantity(0.02, "MPa/mm")

    # Start the mechanical simulation.
    simulator.simulate()








.. GENERATED FROM PYTHON SOURCE LINES 220-224

.. note::
   By default, the simulation is coupled to an open-loop circulation model with
   a constant preload and a Windkessel-type afterload. Moreover, the simulation
   is set to run for a single heartbeat.

.. GENERATED FROM PYTHON SOURCE LINES 226-228

Postprocessing
~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 228-277

.. code-block:: Python


    # Plot pressure-volume loop
    # ~~~~~~~~~~~~~~~~~~~~~~~~~

    # Read the LS-DYNA binout file that contains cavity volumes and pressure.
    icvout = ICVoutReader(os.path.join(workdir, "simulation-mechanics", "main-mechanics", "binout0000"))
    pressure = icvout.get_pressure(1)
    volume = icvout.get_volume(1)

    # Convert to mL and mmHg and plot the pressure and volume curves.
    plt.plot(volume / 1000, pressure * 7500, label="Left ventricle")
    plt.xlabel("Volume (mL)")
    plt.ylabel("Pressure (mmHg)")
    plt.title("Pressure-volume loop")
    plt.show()

    # Plot the displacement field
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    mesh_folder = os.path.join(workdir, "simulation-mechanics", "main-mechanics", "post", "vtks")
    mesh_files = sorted(glob.glob(f"{mesh_folder}/*.vtu"))
    mesh_list = []
    for mesh_file in mesh_files:
        mesh = pv.read(mesh_file)
        mesh.set_active_vectors("displacement")
        mesh_list.append(mesh)

    # Create a PyVista plotter
    plotter = pv.Plotter()

    if mesh_files:
        actor = plotter.add_mesh(mesh_list[0])

    plotter.show(interactive_update=True)


    # Animate the meshes over time
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    # Use a function for animation.
    def animate():
        for m in mesh_list:
            plotter.clear()
            plotter.add_mesh(m, show_edges=True, opacity=0.5, scalars=None)
            plotter.update()
            plotter.render()
            time.sleep(0.1)  # Control animation speed


    # Animate the model.
    animate()







.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_006.png
        :alt: mechanics simulator leftventricle pr
        :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_006.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_mechanics-simulator-leftventricle_pr_006.vtksz


.. image-sg:: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_007.png
   :alt: Pressure-volume loop
   :srcset: /examples/simulator/images/sphx_glr_mechanics-simulator-leftventricle_pr_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_0.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_1.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_10.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_11.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_12.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_13.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_14.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_15.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_16.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_17.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_18.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_19.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_2.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_20.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_21.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_22.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_23.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_24.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_25.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_26.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_27.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_28.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_29.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_3.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_30.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_31.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_32.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_33.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_34.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_35.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_36.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_37.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_38.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_39.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_4.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_40.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_5.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_6.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_7.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_8.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(
    ERROR:root:Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\pyvista\core\utilities\fileio.py:295: UserWarning: The VTK reader `vtkXMLUnstructuredGridReader` in pyvista reader `XMLUnstructuredGridReader('C:\Users\ansys\pyansys-heart\downloads\Rodero2021\01\LeftVentricle-simulation\simulation-mechanics\main-mechanics\post\vtks\heart_9.vtu')` raised an errorwhile reading the file.
            "Error reading InformationKey element for vtkDataArray::L2_NORM_RANGE of type vtkInformationDoubleVectorKey"
      warnings.warn(





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (8 minutes 8.150 seconds)


.. _sphx_glr_download_examples_simulator_mechanics-simulator-leftventricle_pr.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: mechanics-simulator-leftventricle_pr.ipynb <mechanics-simulator-leftventricle_pr.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: mechanics-simulator-leftventricle_pr.py <mechanics-simulator-leftventricle_pr.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: mechanics-simulator-leftventricle_pr.zip <mechanics-simulator-leftventricle_pr.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
